added a new comment

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Wheather Application</title>
 </head>
-<!-- https://github.com/pranavshekhar007/Wheather_Forecast/tree/main -->
+<!-- my gitHub link - https://github.com/pranavshekhar007/Wheather_Forecast/tree/main -->
 <body>
     <div class="containers">
         <div class="header">
